--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 
+      <!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Progate</title>
+        <link rel="stylesheet" href="">
+    </head>
+    <body>
+        <h1>Hello to Progate</h1>
+    </body>
+</html>
